--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                       <a href="#">MINILLA</a>
                     </h3>
                     <span class="category_0">
-                      <p>(FECHA DESCONOCIDA)</p>
+                      <p>(SIGLO XX)</p>
                     </span>
                     <span class="category">
                       <a href="./img/img_2.jpg">
@@ -168,7 +168,7 @@
                       <a href="#">PUERTO DE LA LUZ</a>
                     </h3>
                     <span class="category_0">
-                      <p>(FECHA DESCONOCIDA)</p>
+                      <p>(SIGLO XX)</p>
                     </span>
                     <span class="category">
                       <a href="./img/img_4.jpg">
