--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                       <a href="#">VEGUETA</a>
                     </h3>
                     <span class="category_0">
-                      <p>(1895-1900)</p>
+                      <p class="date_img_1">(1895-1900)</p>
+                      <p class="info_img_1">Podemos ver el istmo de Guanarteme y zona de cultivo.</p>
                     </span>
                     <span class="category">
                       <a href="./img/screenshot_1.png">
@@ -128,7 +129,8 @@
                       <a href="#">MINILLA</a>
                     </h3>
                     <span class="category_0">
-                      <p>(SIGLO XX)</p>
+                      <p class="date_img_1">(1905)</p>
+                      <p class="info_img_1">Podemos ver la zona alta de Arenales.</p>
                     </span>
                     <span class="category">
                       <a href="./img/img_2.jpg">
@@ -148,7 +150,8 @@
                       <a href="#">LAS COLORADAS</a>
                     </h3>
                     <span class="category_0">
-                      <p>(1893)</p>
+                      <p class="date_img_1">(1893)</p>
+                      <p class="info_img_1">Podemos ver una zona de cultivo.</p>
                     </span>
                     <span class="category">
                       <a href="./img/screenshot_3.png">
@@ -168,7 +171,8 @@
                       <a href="#">PUERTO DE LA LUZ</a>
                     </h3>
                     <span class="category_0">
-                      <p>(SIGLO XX)</p>
+                      <p class="date_img_1">(1969)</p>
+                      <p class="info_img_1">Mirando desde el istmo del de la Isleta, vemos el Puerto de San Telmo.</p>
                     </span>
                     <span class="category">
                       <a href="./img/img_4.jpg">
@@ -188,7 +192,8 @@
                       <a href="#">CIUDAD JARDÍN</a>
                     </h3>
                     <span class="category_0">
-                      <p>(1920-1930)</p>
+                      <p class="date_img_1">(1920-1930)</p>
+                      <p class="info_img_1">Las casas están organizadas, a diferencias de zonas como La Isleta.</p>
                     </span>
                     <span class="category">
                       <a href="./img/screenshot_5.png">
@@ -208,7 +213,7 @@
                       <a href="#">CIUDAD JARDÍN</a>
                     </h3>
                     <span class="category_0">
-                      <P>Siglo XXI (Comienzo-2022)</P>
+                      <p class="date_img_1">Siglo XXI (2000-2022)</p>
                     </span>
                     <span class="category">
                       <a href="./img/img_6.webp">
