--- a/citas.html
+++ b/citas.html
@@ -149,6 +149,15 @@
                   </span>
                 </li>
               </ul>
+              <ul>
+                <li>Historia de la ULPGC. (2019, 4 octubre). ULPGC - Universidad de Las Palmas de Gran Canaria. 
+                  <span>
+                    <a href="https://www.ulpgc.es/presentacion/historia-de-la-ulpgc">
+                      https://www.ulpgc.es/presentacion/historia-de-la-ulpgc
+                    </a>
+                  </span>
+                </li>
+              </ul>
             </div>
           </div>
         </section>
