--- a/citas.html
+++ b/citas.html
@@ -158,6 +158,15 @@
                   </span>
                 </li>
               </ul>
+              <ul>
+                <li>Información relativa a las funciones que desarrolla la entidad - Transparencia Cabildo Insular de La Gomera. (s. f.). Cabildo Insular de La Gomera. 
+                  <span>
+                    <a href="https://transparencia.lagomera.es/informacion-institucional/funciones-que-desarrolla-la-entidad">
+                      https://transparencia.lagomera.es/informacion-institucional/funciones-que-desarrolla-la-entidad
+                    </a>
+                  </span>
+                </li>
+              </ul>
             </div>
           </div>
         </section>
@@ -170,6 +179,35 @@
 
 
     <section id="section_citas_3" style="margin-top: 100px;">
+      <main>
+        <h2 class="box_1">INFORMES</h2>
+        <section class="banner_5">
+          <div id="preguntas" class="preguntas" style="margin-right: 100px; margin-left: 100px;">
+            <h2>TIMELINE</h2>
+            <div id="preguntas_2">
+              <ul>
+                <li>Rodríguez Martín, N. (s. f.). LA EMIGRACIÓN CLANDESTINA DE CANARIAS A VENEZUELA EN LOS AÑOS CUARENTA Y CINCUENTA DEL SIGLO XX. 
+                  <span>
+                    <a href="https://dialnet.unirioja.es/descarga/articulo/2536316.pdf">
+                      https://dialnet.unirioja.es/descarga/articulo/2536316.pdf
+                    </a>
+                  </span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+      </main>
+      <!-- SCROLL-DOWN_citas_3 -->
+      <section id="anchor_2" class="demo_2">
+        <a href="#section_citas_4"><span></span></a>
+      </section>
+    </section>
+
+
+
+
+    <section id="section_citas_4" style="margin-top: 100px;">
       <main>
         <h2 class="box_1">IMÁGENES</h2>
         <section class="banner_5">
